<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieDetails"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/poster_iv"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/unfilled_star"
            android:onClick="starClick"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movieTitle"
            style="@style/Title_Text"/>
        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Paragraph"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            style="@style/Title_Text"/>
        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Paragraph"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vote_avrage"
            style="@style/Title_Text"/>
        <TextView
            android:id="@+id/vote_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Paragraph"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            style="@style/Title_Text"/>
        <TextView
            android:id="@+id/overview_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Paragraph"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailers_tv"
                style="@style/Title_Text"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews_tv"
                style="@style/Title_Text"/>


                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/reviews_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"/>



        </LinearLayout>
    </ScrollView>
</RelativeLayout>